--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="header__inner">
       <a class="header__logo" href="{{ '/' | relative_url }}">
         <div class="header__logo--container">
-          {% include logo.svg %}
+          ISMIR 2020
         </div>
       </a>
       <nav class="header__links">
