--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -1,4 +1,4 @@
-.hero {
+.hero__home {
   margin: 3.75rem auto 0;
   min-height: 16.25rem;
   width: 100%;
@@ -13,16 +13,6 @@
     height: 36em;
   }
 
-  &::before {
-    position: absolute;
-    display: block;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(52, 56, 81, .8);
-  }
 }
 
 .hero--small {
@@ -37,14 +27,6 @@
   }
 
   &::before {
-    position: absolute;
-    display: block;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(52, 56, 81, .8);
   }
 }
 
@@ -52,7 +34,7 @@
   position: absolute;
   margin: auto;
   top: 50%;
-  left: 40%;
+  left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   color: rgba(255, 255, 255, 0.8);
@@ -75,6 +57,40 @@
       line-height: 3.125rem;
     }
   }
+}
+
+.hero__wrap__home {
+  @extend .container;
+
+  color: rgba(255, 255, 255, 0.8);
+  z-index: 1;
+
+  @include breakpoint($xs) {
+    padding-top: 43px;
+    .hero__title {
+      font-size: 1.45em;
+      line-height: 25px;
+    }
+  }
+  @include breakpoint($md) {
+    padding-top: 42px;
+    .hero__title {
+      font-size: 1.9em;
+      line-height: 32px;
+    }
+  }
+  @include breakpoint($lg) {
+    padding-top: 223px;
+    .hero__title {
+      font-size: 2.2em;
+      line-height: 34px;
+    }
+  }
+  .hero__title {
+    color: white;
+    margin-bottom: 14px;
+  }
+
 }
 
 .page-content {
