Changed card widths

--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -17,28 +17,32 @@
     box-shadow: 0 2px 40px 0 hsla(232, 8%, 63%, .3);
   }
 
-  @include breakpoint($md) {
-    width: 48.4375%;
-    margin-right: 3.125%;
+  @include breakpoint(500px) {
+    width: 47%;
+  }
 
-    &:last-of-type,
-    &:nth-child(2n+2) {
-      margin-right: 0;
-    }
+  @include breakpoint($md) {
+    width: 23%;
+    // margin-right: 3.125%;
+    //
+    // &:last-of-type,
+    // &:nth-child(2n+2) {
+    //   margin-right: 0;
+    // }
   }
 
   @include breakpoint($xl) {
-    width: 31.25%;
-    margin-right: 3.125%;
+    width: 23%;
+    // margin-right: 3.125%;
 
-    &:nth-child(2n+2) {
-      margin-right: 3.125%;
-    }
-
-    &:last-of-type,
-    &:nth-child(3n+3) {
-      margin-right: 0;
-    }
+    // &:nth-child(2n+2) {
+    //   margin-right: 3.125%;
+    // }
+    //
+    // &:last-of-type,
+    // &:nth-child(3n+3) {
+    //   margin-right: 0;
+    // }
   }
 
   &__label {
