--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -9,6 +9,7 @@
   will-change: transform;
   transition: transform .3s, background-color 0.5s ease;
   transform: translateY(0%);
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 1px 3px;
 
   a {
     display: flex;
@@ -46,7 +47,7 @@
   }
 
   .header__logo--container {
-    width: 58px;
+
 
     .logo {
       fill: currentColor;
