--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,6 +1,6 @@
 <div class="post-card" itemprop="blogPosts" itemscope="" itemtype="http://schema.org/BlogPosting">
-  {% if post.categories %}
-    {% assign categories = post.categories %}
+  {% if card.categories %}
+    {% assign categories = card.categories %}
     <span class="post-card__label">
       {% for category in categories %}
         <a href="{{site.baseurl}}/categories/#{{category|slugize}}" class="label"> {{ category }} </a>
@@ -8,39 +8,43 @@
       {% endfor %}
     </span>
   {% endif %}
-  <a href="{{ post.url | relative_url }}">
-    {% if post.featured-img %}
+  <a href="{{ card.url | relative_url }}">
+    {% if card.img %}
       <figure class="post-card__thumb">
         <img
-          src="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{post.featured-img}}_placehold.jpg"
-          data-srcset="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{post.featured-img}}_thumb.jpg, {{ site.url }}{{ site.baseurl }}/assets/img/posts/{{post.featured-img}}_thumb@2x.jpg 2x"
+          src="{{ site.url }}{{ site.baseurl }}/assets/img/cards/{{card.img}}"
+          data-srcset="{{ site.url }}{{ site.baseurl }}/assets/img/cards/{{card.img}}, {{ site.url }}{{ site.baseurl }}/assets/img/cards/{{card.img}}"
           class="lazyload blur"
-          alt="{{post.title}}"
+          alt="{{card.title}}"
         />
-        <noscript><img src="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{post.featured-img}}_thumb.jpg" alt="{{ post.title }}"></noscript>
+        <noscript><img src="{{ site.url }}{{ site.baseurl }}/assets/img/cards/{{card.img}}" alt="{{ card.title }}"></noscript>
       </figure>
     {% else %}
       <figure class="post-card__thumb">
-        <div class="dark-bg"></div>
+        <div style="background-color: #{{ card.background-color }}"></div>
       </figure>
     {% endif %}
   </a>
-  <a class="post-card__inner__title" href="{{ post.url | relative_url }}">
+  <a style="background-color: #{{ card.background-color }}" class="post-card__inner__title" href="{{ card.url | relative_url }}">
     <div class="post-card__header">
-      <h2>{{ post.title | strip_html | truncate: 50 }}</h2>
+      <h2>{{ card.title | strip_html | truncate: 50 }}</h2>
       {% assign date_format = site.sleek.date_format | default: "%b %-d, %Y" %}
       <span class="post-card__meta">
-        <time>{{ post.date | date: date_format }}</time>
+        <time>{{ card.date | date: date_format }}</time>
       </span>
     </div>
   </a>
-  <a class="post-card__inner" href="{{ post.url | relative_url }}">
-    {% if post.summary %}
-      <p>{{ post.summary | strip_html | truncatewords:20 }}</p>
-    {% else %}
-      <p>{{ post.content | strip_html | truncatewords: 20 }}</p>
+  <div class="post-card__inner" href="{{ card.url | relative_url }}">
+    {% if card.content %}
+      {% if card.title == 'Important Dates' %}
+        {{ card.content }}
+      {% else %}
+        <p>{{ card.content | strip_html | truncatewords:20 }}</p>
+      {% endif %}
     {% endif %}
-    <a href="#" class="more-link">Find out more ></a>
-  </a>
+    {% if card.more %}
+      <a href="#" class="more-link">Find out more > </a>
+    {% endif %}
+  </div>
 
 </div>
