--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -81,6 +81,7 @@
   &__inner__title {
     @extend .post-card__inner;
     padding: 0.5em 1.25em;
+    margin-top: -1px;
     background-color: #fe9a02;
     h2 {
       margin: 0;
