--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,10 @@
-<header class="header" itemscope itemtype="http://schema.org/SiteNavigationElement" aria-label="Main navigation">
-  <div class="container">
+<header class="header" style="background-color: #f4f4f4" itemscope itemtype="http://schema.org/SiteNavigationElement" aria-label="Main navigation">
+  <div class="container" style="height: 100%">
     <div class="header__inner">
       <a class="header__logo" href="{{ '/' | relative_url }}">
-        <div class="header__logo--container">
-          ISMIR 2020
-        </div>
+          <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logos/Homepage_ISMIR_logo.png"/>
       </a>
-      <nav class="header__links">
+      <nav class="header__links" style="background-color: #f4f4f4">
         <div class="container header__links-wrapper">
           {% for item in site.navigation %}
             <a class="header__link" href="{{ item.link | relative_url }}" itemprop="url">
