--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -1,9 +1,10 @@
 .header {
-	background-color: #fff;
+	background-color: #f4f4f4;
 	color: #343851;
 	position: absolute;
 	z-index: 4;
 	width: 100%;
+	height: 80px;
 	top: 0;
 	left: 0;
 	will-change: transform;
@@ -11,27 +12,13 @@
 	transform: translateY(0)
 }
 
-.header a {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	border-bottom: 0
-}
-
 .header__logo {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	height: 100%;
-	overflow: hidden;
-	padding: 19px 0;
-	margin-right: 1.25rem;
-	outline: 0;
-	border-bottom: 0;
-	color: #313237
+	width: 210px;
+	border: 0;
+	&:hover {
+		text-decoration: none;
+		border: 0;
+	}
 }
 
 .header__logo .header__logo--container .logo {
@@ -45,7 +32,7 @@
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	height: 3.75em;
+	height: 100%;
 	-webkit-box-pack: justify;
 	-ms-flex-pack: justify;
 	justify-content: space-between
@@ -55,11 +42,11 @@
 	padding-bottom: .5rem;
 	display: none;
 	position: absolute;
-	top: 3.75em;
+	top: 75px;
 	left: 0;
 	width: 100%;
 	height: auto;
-	background: #fff
+	// background: #fff
 }
 
 .header__link {
@@ -136,7 +123,7 @@
 		display: block;
 		position: absolute;
 		left: 0;
-		bottom: 0;
+		bottom: 15px;
 		height: 3px;
 		width: 100%;
 		-webkit-transform: scaleX(0);
