--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -31,46 +31,38 @@
   }
 }
 
-.header__logo {
-  display: flex;
-  height: 100%;
-  overflow: hidden;
-  padding: 19px 0;
-  margin-right: 1.25rem;
-  outline: 0;
-  border-bottom: 0;
-  color: $heading-color;
-
-  &:hover {
-    color: $heading-color;
-    border-bottom: 0;
-  }
-
-  .header__logo--container {
-
-
-    .logo {
-      fill: currentColor;
-    }
-  }
-}
-
-.header__inner {
-  display: flex;
-  align-items: center;
-  height: 3.75em;
-  justify-content: space-between;
-}
+// .header__logo {
+//   display: flex;
+//   overflow: hidden;
+//   padding: 19px 0;
+//   margin-right: 1.25rem;
+//   outline: 0;
+//   border-bottom: 0;
+//   color: $heading-color;
+//
+//   &:hover {
+//     color: $heading-color;
+//     border-bottom: 0;
+//   }
+//
+//   .header__logo--container {
+//
+//
+//     .logo {
+//       fill: currentColor;
+//     }
+//   }
+// }
 
 .header__links {
   padding-bottom: .5rem;
   display: none;
   position: absolute;
-  top: 3.75em;
+  top: 75px;
   left: 0;
   width: 100%;
   height: auto;
-  background: $bg-color;
+  // background: $bg-color;
 }
 
 .header__link {
@@ -174,7 +166,7 @@
       display: block;
       position: absolute;
       left: 0;
-      bottom: 0;
+      // bottom: 0;
       height: 3px;
       width: 100%;
       transform: scaleX(0);
