--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -46,6 +46,7 @@
 	left: 0;
 	width: 100%;
 	height: auto;
+	background-color: #f4f4f4
 	// background: #fff
 }
 
@@ -105,13 +106,14 @@
 		width: auto;
 		height: 100%
 	}
-	.header__links-wrapper {
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		height: 100%;
-		padding: 0
-	}
+	// .header__links-wrapper {
+	// 	display: -webkit-box;
+	// 	display: -ms-flexbox;
+	// 	display: flex;
+	// 	height: 100%;
+	// 	padding: 0
+	// 	margin-top: 5px;
+	// }
 	.header__link {
 		position: relative;
 		padding: .938rem 1rem;
