--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -31,40 +31,6 @@
   }
 }
 
-// .header__logo {
-//   display: flex;
-//   overflow: hidden;
-//   padding: 19px 0;
-//   margin-right: 1.25rem;
-//   outline: 0;
-//   border-bottom: 0;
-//   color: $heading-color;
-//
-//   &:hover {
-//     color: $heading-color;
-//     border-bottom: 0;
-//   }
-//
-//   .header__logo--container {
-//
-//
-//     .logo {
-//       fill: currentColor;
-//     }
-//   }
-// }
-
-.header__links {
-  padding-bottom: .5rem;
-  display: none;
-  position: absolute;
-  top: 75px;
-  left: 0;
-  width: 100%;
-  height: auto;
-  // background: $bg-color;
-}
-
 .header__link {
   color: $text-color;
   padding: .938rem 0;
@@ -191,6 +157,7 @@
 .header__links-wrapper {
   background: #f4f4f4;
   width: 100%;
+  margin-top: 5px;
 }
 
 .js--open {
