Updated hero image text and tab icon

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,9 +28,9 @@ layout: compress
             <br>for Music Information Retrieval</b>
             <br>Conference
         </h2>
-        <p class="hero__meta">12-16 October 2020
-          <br>Centre Mont Royal, Montreal
-          <br>Canada
+        <p class="hero__meta">12-16 OCTOBER 2020
+          <br>CENTRE MONT ROYAL, MONTREAL
+          <br>CANADA
         </p>
       </div>
     </div>
