--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,8 +18,17 @@ layout: compress
     {% endif %}
 
     {% include header.html %}
-
+    {% if page.hero_background %}
+      {% if page.background_position %}
+        <div class="hero--small"
+          style="background-image: url({{ site.baseurl }}/assets/img/{{ page.hero_background }});
+                 background-position: {{ page.background_position }};">
+      {% else %}
+        <div class="hero--small" style="background-image: url({{ site.baseurl }}/assets/img/{{ page.hero_background }})">
+      {% endif %}
+    {% else %}
     <div class="hero--small">
+    {% endif %}
       <div class="hero__wrap">
         <h1 class="hero__title">{{ page.title }}</h1>
       </div>
