Updated nav formatting and removed header.scss file from rendering

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,7 +17,7 @@
 @import "components/_btn.scss";
 @import "components/_card.scss";
 @import "components/_form.scss";
-@import "components/_header.scss";
+// @import "components/_header.scss";
 @import "components/_label.scss";
 @import "components/_modal.scss";
 @import "components/_pagination.scss";
