--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -1,21 +1,21 @@
 .header {
-  background-color: $bg-color;
-  color: $text-color;
-  position: absolute;
-  z-index: 4;
-  width: 100%;
-  top: 0;
-  left: 0;
-  will-change: transform;
-  transition: transform .3s, background-color 0.5s ease;
-  transform: translateY(0%);
-  box-shadow: rgba(0, 0, 0, 0.08) 0px 1px 3px;
-
-  a {
+	background-color: #f4f4f4;
+	color: #343851;
+	position: absolute;
+	z-index: 4;
+	width: 100%;
+	height: 80px;
+	top: 0;
+	left: 0;
+	will-change: transform;
+	-webkit-transform: translateY(0);
+	transform: translateY(0);
+	transition: transform .3s, background-color 0.5s ease;
+	box-shadow: rgba(0, 0, 0, 0.08) 0px 1px 3px;
+	a {
     display: flex;
     align-items: center;
     border-bottom: 0;
-
   }
 
   &.fix-nav {
@@ -31,12 +31,66 @@
   }
 }
 
-.header__link {
-  color: $text-color;
-  padding: .938rem 0;
-  border-top: 1px solid $border;
+.header__logo {
+	width: 210px;
+	border: 0;
+	&:hover {
+		text-decoration: none;
+		border: 0;
+	}
 }
 
+.header__logo .header__logo--container .logo {
+	fill: currentColor
+}
+
+.header__inner {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	height: 100%;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between
+}
+
+.header__links {
+	padding-bottom: .5rem;
+	display: none;
+	position: absolute;
+	top: 75px;
+	left: 0;
+	width: 100%;
+	height: auto;
+	background-color: #f4f4f4
+	// background: #fff
+}
+
+.header__link {
+	color: #343851;
+	padding: .938rem 0;
+	border-top: 1px solid #ededed
+}
+
+.header__toggle {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	width: 44px;
+	height: 100%;
+	background-color: transparent;
+	// padding-left: 1.25rem
+}
 
 .header__toggle {
   display: flex;
@@ -45,7 +99,7 @@
   width: 44px;
   height: 100%;
   background-color: transparent;
-  padding-left: 1.25rem;
+  padding: 0 0.62rem 0;
   cursor: pointer;
 
   span {
@@ -99,6 +153,7 @@
   }
 }
 
+
 @media (min-width: $lg) {
   .header__toggle {
     display: none;
@@ -132,9 +187,10 @@
       display: block;
       position: absolute;
       left: 0;
-      // bottom: 0;
+      bottom: 15px;
       height: 3px;
       width: 100%;
+      -webkit-transform: scaleX(0);
       transform: scaleX(0);
       background: $link-color;
       transition: color 0.2s ease-in-out, transform .2s ease-in-out;
@@ -157,7 +213,6 @@
 .header__links-wrapper {
   background: #f4f4f4;
   width: 100%;
-  margin-top: 5px;
 }
 
 .js--open {
