Changed home page formatting

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
   </div>
 </footer>
 <script async src="{{ "/assets/js/bundle.js" | relative_url }}"></script>
-{% if site.service_worker %}
+<!-- {% if site.service_worker %}
 <script async>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('{{ "/sw.js" | relative_url }}').then(function( registration ) {
@@ -34,4 +34,4 @@
     });
   }
 </script>
-{% endif %}
+{% endif %} -->
