--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,5 @@
   <script type="text/javascript">
    {% include loadCss.js %}
   </script>
+  <!-- <script src="{{ '/assets/js/pixi.min.js' | relative_url }}"></script> -->
 </head>
