Changed date formatting

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -12,7 +12,7 @@
     <h2>Main Event</h2>
     <table>
       <tbody>
-        <tr><td>Tutorials</td><td>11 Oct 2020</td></tr>
+        <tr><td>Tutorials</td><td>October 11, 2020</td></tr>
         <tr><td>Scientific Program</td><td>October 12–16, 2020</td></tr>
       </tbody>
     </table>
