--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -1,8 +1,8 @@
 .post-card {
   display: block;
   position: relative;
-  width: 100%;
-  min-height: 500px;
+  // width: 100%;
+  // min-height: 432px;
   border-radius: 4px;
   overflow: hidden;
   background-color: $bg-color;
@@ -23,12 +23,12 @@
     box-shadow: 0 2px 40px 0 hsla(232, 8%, 63%, .3);
   }
 
-  @include breakpoint(500px) {
-    width: 47%;
-  }
+  // @include breakpoint(500px) {
+  //   width: 47%;
+  // }
 
   @include breakpoint($md) {
-    width: 42%;
+    // width: 42%;
     // margin-right: 3.125%;
     //
     // &:last-of-type,
@@ -38,7 +38,7 @@
   }
 
   @include breakpoint($xl) {
-    width: 32%;
+    // width: 32%;
     // margin-right: 3.125%;
 
     // &:nth-child(2n+2) {
@@ -84,6 +84,9 @@
     }
     a {
       border-bottom: none;
+    }
+    img {
+      max-height: 200px;
     }
   }
 
@@ -137,17 +140,17 @@
 }
 
 .event-card {
-  display: flex;
-  justify-content: space-around;
+  // display: flex;
+  // justify-content: space-around;
   position: relative;
   width: 100%;
   // min-height: 720px;
-  margin-top: 2.25rem;
+
   border-radius: 4px 4px;
   overflow: hidden;
   background-color: $bg-color;
   // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
-  margin-bottom: 2.25rem; // don't use % value see more: https://github.com/philipwalton/flexbugs/issues/86
+   // don't use % value see more: https://github.com/philipwalton/flexbugs/issues/86
   border-bottom: 0;
   transition: box-shadow .25s ease;
   // &:hover,
@@ -155,7 +158,75 @@
   //   border-bottom: 0;
   //   box-shadow: 0 2px 40px 0 hsla(232, 8%, 63%, .3);
   // }
-  div {
-    width: 45%;
+  // div {
+  //   width: 45%;
+  // }
+}
+
+.dates-container {
+  width: 30%;
+  // margin-bottom: 2.25rem;
+  margin-top: 2.25rem;
+}
+.cards-container {
+  width: 70%;
+  // margin-bottom: 2.25rem;
+  margin-top: 2.25rem;
+  padding: 0 0 0 2.25rem;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  > div:first-child {
+    height: 383px;
+    width: 100%;
+  }
+  > div:not(:first-child) {
+    // flex: 1;
+    width: 48%;
+    height: 480px;
+  }
+}
+
+.city-card {
+  display: block;
+  position: relative;
+  // width: 100%;
+  // min-height: 432px;
+  // background-image: url();
+  border-radius: 4px;
+  overflow: hidden;
+  background-color: $bg-color;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+  margin-bottom: 2.25rem; // don't use % value see more: https://github.com/philipwalton/flexbugs/issues/86
+  border-bottom: 0;
+  transition: box-shadow .25s ease;
+  .more-link {
+    position: absolute;
+    bottom: 20px;
+    left: 1.25rem;
+    border-bottom: none;
+  }
+
+  &:hover,
+  &:focus {
+    border-bottom: 0;
+    box-shadow: 0 2px 40px 0 hsla(232, 8%, 63%, .3);
+  }
+
+  h1 {
+    position: absolute;
+    top: 1.25rem;
+    left: 1.25rem;
+    color: white;
+  }
+  .description {
+    position: absolute;
+    bottom: 1.25rem;
+    left: 1.25rem;
+    background: #00000099;
+    width: calc(48% - 2 * 1.25rem);
+    color: white;
+    padding: 15px;
+    border-radius: 4px;
   }
 }
