Updated description formatting for the montreal card page

--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -447,6 +447,9 @@
     color: white;
   }
   .description {
+    p {
+      margin: 0;
+    }
     position: absolute;
     bottom: 1.25rem;
     left: 1.25rem;
