Changed header formatting on dates sidebar

--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -181,6 +181,33 @@
     @include breakpoint($lg) {
       height: auto;
     }
+    h2 {
+      overflow: hidden;
+      text-align: left;
+      position:relative;
+      // background-color: red
+    }
+
+    // h2:before,
+    // h2:after {
+    //   background-color: #000;
+    //   content: "";
+    //   display: inline-block;
+    //   height: 1px;
+    //   position: relative;
+    //   vertical-align: middle;
+    //   width: 50%;
+    // }
+
+    // h2:before {
+    //   right: 0.5em;
+    //   margin-left: -50%;
+    // }
+
+    // h2:after {
+    //   left: 0.5em;
+    //   margin-right: -50%;
+    // }
   }
 }
 
