Removed unneeded bundle.js.map calls

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
     <span>&copy; {{ site.time | date: '%Y' }} {{ site.title | escape }}. All rights reserved.</span>
   </div>
 </footer>
-<script async src="{{ "/assets/js/bundle.js" | relative_url }}"></script>
+<script async src='{{ "/assets/js/bundle.js" | relative_url }}'></script>
 <!-- {% if site.service_worker %}
 <script async>
   if ('serviceWorker' in navigator) {
