Added image zooom on hover effect for the cards on homepage

--- a/_includes/city.html
+++ b/_includes/city.html
@@ -1,8 +1,9 @@
 <div class="city-card"
-     style="background-image: url({{ site.baseurl }}/assets/img/cards/biosphere.jpg)"
      itemprop="blogPosts"
      itemscope=""
      itemtype="http://schema.org/BlogPosting">
+  <div class="city-background"  style="background-image: url({{ site.baseurl }}/assets/img/cards/biosphere.jpg)">
+  </div>
   <a href="{{ site.baseurl }}/Montreal/">
     <h1> Montréal hosts ISMIR2020 </h1>
     <div class="description">
