--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -444,6 +444,10 @@
   width: 100%;
   display: block;
   position: relative;
+  .city-background {
+    width: 100%;
+    height: 100%;
+  }
   // width: 100%;
   // min-height: 432px;
   // background-image: url();
@@ -498,4 +502,14 @@
       width: calc(48% - 2 * 1.125rem);
     }
   }
+}
+
+.city-background, .post-card__thumb img {
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+
+.city-background:hover, .post-card:hover a .post-card__thumb img {
+  -webkit-transform: scale(1.08);
+  transform: scale(1.08);
 }
