--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -65,7 +65,7 @@
 	left: 0;
 	width: 100%;
 	height: auto;
-	background-color: #f4f4f4
+	background-color: #fff;
 	// background: #fff
 }
 
@@ -211,7 +211,7 @@
 }
 
 .header__links-wrapper {
-  background: #f4f4f4;
+  background: #fff;
   width: 100%;
 }
 
