--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -28,7 +28,7 @@
       <table>
         <tbody>
           <tr><td>Reception</td><td>October 11, 2020</td></tr>
-          <tr><td>WiMIR Reception</td><td>October 12–16, 2020</td></tr>
+          <tr><td>WiMIR Reception</td><td>October TBD, 2020</td></tr>
           <tr><td>Concert</td><td>October 13, 2020</td></tr>
           <tr><td>Banquet</td><td>October 14, 2020</td></tr>
         </tbody>
@@ -39,7 +39,7 @@
       <br>
       <table>
         <tbody>
-          <tr><td>HAMR</td><td>October 9–10, 2020</td></tr>
+          <tr><td>HAMR</td><td>October 16–17, 2020</td></tr>
           <tr><td>WoRMS</td><td>October 10, 2020</td></tr>
           <tr><td>DLfM</td><td>October 16, 2020</td></tr>
         </tbody>
