Fix dates for scientific program and add CFP

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -5,6 +5,7 @@
       <br>
       <table>
         <tbody>
+          <tr><td>Call for Papers</td><td>December 20, 2019</td></tr>
           <tr><td>Abstract submission</td><td>April 10, 2020</td></tr>
           <tr><td>Final submission</td><td>April 17, 2020</td></tr>
           <tr><td>Notification of Acceptance</td><td>June 12, 2020</td></tr>
@@ -18,7 +19,7 @@
       <table>
         <tbody>
           <tr><td>Tutorials</td><td>October 11, 2020</td></tr>
-          <tr><td>Scientific Program</td><td>October 11–15, 2020</td></tr>
+          <tr><td>Scientific Program</td><td>October 12–15, 2020</td></tr>
         </tbody>
       </table>
     </div>
