Changed date formatting

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -5,11 +5,11 @@
       <br>
       <table>
         <tbody>
-          <tr><td>Call for Papers</td><td>December 20, 2019</td></tr>
-          <tr><td>Abstract submission</td><td>April 10, 2020</td></tr>
-          <tr><td>Final submission</td><td>April 17, 2020</td></tr>
-          <tr><td>Notification of Acceptance</td><td>June 12, 2020</td></tr>
-          <tr><td>Camera-ready Upload</td><td>July 6, 2020</td></tr>
+          <tr><td>Call for Papers</td><td>20 December, 2019</td></tr>
+          <tr><td>Abstract submission</td><td>10 April, 2020</td></tr>
+          <tr><td>Final submission</td><td>17 April, 2020</td></tr>
+          <tr><td>Notification of Acceptance</td><td>12 June, 2020</td></tr>
+          <tr><td>Camera-ready Upload</td><td>6 July, 2020</td></tr>
         </tbody>
       </table>
     </div>
@@ -18,8 +18,8 @@
       <br>
       <table>
         <tbody>
-          <tr><td>Tutorials</td><td>October 11, 2020</td></tr>
-          <tr><td>Scientific Program</td><td>October 12–15, 2020</td></tr>
+          <tr><td>Tutorials</td><td>11 October, 2020</td></tr>
+          <tr><td>Scientific Program</td><td>12–15 October, 2020</td></tr>
         </tbody>
       </table>
     </div>
@@ -28,10 +28,10 @@
       <br>
       <table>
         <tbody>
-          <tr><td>Reception</td><td>October 11, 2020</td></tr>
-          <tr><td>WiMIR Reception</td><td>October TBD, 2020</td></tr>
-          <tr><td>Concert</td><td>October 13, 2020</td></tr>
-          <tr><td>Banquet</td><td>October 14, 2020</td></tr>
+          <tr><td>Reception</td><td>11 October, 2020</td></tr>
+          <tr><td>WiMIR Reception</td><td>TBD October, 2020</td></tr>
+          <tr><td>Concert</td><td>13 October, 2020</td></tr>
+          <tr><td>Banquet</td><td>14 October, 2020</td></tr>
         </tbody>
       </table>
     </div>
@@ -40,9 +40,9 @@
       <br>
       <table>
         <tbody>
-          <tr><td>HAMR</td><td>October 16–17, 2020</td></tr>
-          <tr><td>WoRMS</td><td>October 10, 2020</td></tr>
-          <tr><td>DLfM</td><td>October 16, 2020</td></tr>
+          <tr><td>WoRMS</td><td>10 October, 2020</td></tr>
+          <tr><td>DLfM</td><td>16 October, 2020</td></tr>
+          <tr><td>HAMR</td><td>16–17 October, 2020</td></tr>
         </tbody>
       </table>
     </div>
