Changed nav formatting

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header" style="background-color: #fff" itemscope itemtype="http://schema.org/SiteNavigationElement" aria-label="Main navigation">
-  <div class="container" style="height: 100%">
+  <div class="container header-container" style="height: 80px;">
     <div class="header__inner">
       <a class="header__logo" href="{{ '/' | relative_url }}">
           <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logos/ISMIR-logo_Horizontal - Acronym only_RGB.png"/>
