--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -104,7 +104,7 @@
 		flex-direction: column;
 		visibility: visible;
 		width: auto;
-		height: 100%
+		// height: 100%
 	}
 	// .header__links-wrapper {
 	// 	display: -webkit-box;
