Added controls natively back to video and removed javascript adding controls after page load

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -18,8 +18,8 @@
       <br>
       <table>
         <tbody>
-          <tr><td>Tutorials</td><td>11 October, 2020</td></tr>
-          <tr><td>Scientific Program</td><td>12–15 October, 2020</td></tr>
+          <tr><td>Tutorials</td><td>11 October 2020</td></tr>
+          <tr><td>Scientific Program</td><td>12–15 October 2020</td></tr>
         </tbody>
       </table>
     </div>
@@ -28,10 +28,10 @@
       <br>
       <table>
         <tbody>
-          <tr><td>Reception</td><td>11 October, 2020</td></tr>
-          <tr><td>WiMIR Reception</td><td>TBD October, 2020</td></tr>
-          <tr><td>Concert</td><td>13 October, 2020</td></tr>
-          <tr><td>Banquet</td><td>14 October, 2020</td></tr>
+          <tr><td>Reception</td><td>11 October 2020</td></tr>
+          <tr><td>WiMIR Reception</td><td>TBD October 2020</td></tr>
+          <tr><td>Concert</td><td>13 October 2020</td></tr>
+          <tr><td>Banquet</td><td>14 October 2020</td></tr>
         </tbody>
       </table>
     </div>
@@ -40,9 +40,9 @@
       <br>
       <table>
         <tbody>
-          <tr><td>WoRMS</td><td>10 October, 2020</td></tr>
-          <tr><td>DLfM</td><td>16 October, 2020</td></tr>
-          <tr><td>HAMR</td><td>16–17 October, 2020</td></tr>
+          <tr><td>WoRMS</td><td>10 October 2020</td></tr>
+          <tr><td>DLfM</td><td>16 October 2020</td></tr>
+          <tr><td>HAMR</td><td>16–17 October 2020</td></tr>
         </tbody>
       </table>
     </div>
