Updated more dates

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -5,11 +5,11 @@
       <br>
       <table>
         <tbody>
-          <tr><td>Call for Papers</td><td>20 December, 2019</td></tr>
-          <tr><td>Abstract submission</td><td>10 April, 2020</td></tr>
-          <tr><td>Final submission</td><td>17 April, 2020</td></tr>
-          <tr><td>Notification of Acceptance</td><td>12 June, 2020</td></tr>
-          <tr><td>Camera-ready Upload</td><td>6 July, 2020</td></tr>
+          <tr><td>Call for Papers</td><td>20 December 2019</td></tr>
+          <tr><td>Abstract submission</td><td>10 April 2020</td></tr>
+          <tr><td>Final submission</td><td>17 April 2020</td></tr>
+          <tr><td>Notification of Acceptance</td><td>12 June 2020</td></tr>
+          <tr><td>Camera-ready Upload</td><td>6 July 2020</td></tr>
         </tbody>
       </table>
     </div>
