Added WiMIR Workshop to main page

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -40,6 +40,7 @@
       <br>
       <table>
         <tbody>
+          <tr><td>WiMIR Workshop</td><td>10 October 2020</td></tr>
           <tr><td>WoRMS</td><td>10 October 2020</td></tr>
           <tr><td>DLfM</td><td>16 October 2020</td></tr>
           <tr><td>HAMR</td><td>16–17 October 2020</td></tr>
