Fixed city card hover formatting

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,8 @@
     <span>&copy; {{ site.time | date: '%Y' }} {{ site.title | escape }}. All rights reserved.</span>
   </div>
 </footer>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src='{{ site.baseurl }}/assets/js/cards.js'></script>
 <script async src='{{ "/assets/js/bundle.js" | relative_url }}'></script>
 <!-- {% if site.service_worker %}
 <script async>
