--- a/_includes/critical.css
+++ b/_includes/critical.css
@@ -126,7 +126,7 @@ h2 {
 a {
 	color: #277cea;
 	text-decoration: none;
-	border-bottom: 1px dashed #277cea
+	/* border-bottom: 1px dashed #277cea */
 }
 
 .blur {
