--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -44,9 +44,10 @@
       <br>
       <table>
         <tbody>
-          <tr><td>WiMIR Workshop</td><td>10 October 2020</td></tr>
+          <tr><td><a href="https://wimir.wordpress.com/">WiMIR Workshop</a></td><td>10 October 2020</td></tr>
           <tr><td>WoRMS</td><td>10 October 2020</td></tr>
-          <tr><td>DLfM</td><td>16 October 2020</td></tr>
+          <tr><td><a href="https://dl.acm.org/conference/dlfm">DLfM</a></td><td>16 October 2020</td></tr>
+          <tr><td><a href="https://sites.google.com/view/nlp4musa">NLP4MusA</a></td><td>16 October 2020</td></tr>
           <tr><td>HAMR</td><td>16–17 October 2020</td></tr>
         </tbody>
       </table>
