Add: Link in navigation bar to call for music page
Submission deadline dates were also added to homepage and dates page.

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -11,6 +11,10 @@
           <tr><td>Notification of Acceptance</td><td>12 June 2020</td></tr>
           <tr><td>Camera-ready Upload</td><td>6 July 2020</td></tr>
           <tr><td></td><td></td></tr>
+          <tr><td>Call for music</td><td>15 March 2020</td></tr>
+          <tr><td>Music submission</td><td>29 May 2020</td></tr>
+          <tr><td>Music notification</td><td>15 July 2020</td></tr>
+          <tr><td></td><td></td></tr>
           <tr><td>Call for Tutorials</td><td>25 February 2020</td></tr>
           <tr><td>Tutorials submission</td><td>30 April 2020</td></tr>
           <tr><td>Tutorials notification</td><td>31 May 2020</td></tr>
