Updating submission deadlines

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -5,11 +5,11 @@
       <br>
       <table>
         <tbody>
-          <tr><td>Call for Papers</td><td>20 December 2019</td></tr>
-          <tr><td>Abstract Submission</td><td>10 April 2020</td></tr>
-          <tr><td>Final Submission</td><td>17 April 2020</td></tr>
-          <tr><td>Notification of Acceptance</td><td>12 June 2020</td></tr>
-          <tr><td>Camera-ready Upload</td><td>6 July 2020</td></tr>
+          <tr><td>Call for Papers</td><td>Accepting submissions</td></tr>
+          <tr><td>Abstract Submission</td><td style="text-decoration: line-through;">10 April 2020</td><td>8 May 2020</td></tr>
+          <tr><td>Final Submission</td><td style="text-decoration: line-through;">17 April 2020</td><td>15 May 2020</td></tr>
+          <tr><td>Notification of Acceptance</td><td style="text-decoration: line-through;">12 June 2020</td><td>10 July 2020</td></tr>
+          <tr><td>Camera-ready Upload</td><td style="text-decoration: line-through;">6 July 2020</td><td>3 August 2020</td></tr>
           <tr><td></td><td></td></tr>
           <tr><td>Call for Music</td><td>15 March 2020</td></tr>
           <tr><td>Music Submission</td><td>29 May 2020</td></tr>
